<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/proyectokoinonia"
        android:layout_weight="0.25"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.75"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_user"/>

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:scrollHorizontally="true"
                android:textCursorDrawable="@drawable/cursor_color"
                android:backgroundTint="#f58233"
                android:maxLines="1"
                android:id="@+id/et_user"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_password" />

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textCursorDrawable="@drawable/cursor_color"
                android:backgroundTint="#f58233"
                android:id="@+id/et_password"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:textColor="@color/rojo"
            android:id="@+id/alertMsjLogin"/>

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar_Login"
                android:visibility="invisible"
                android:indeterminate="true"
                android:indeterminateDrawable="@drawable/progressbar_color"
                android:layout_gravity="center_horizontal"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/login"
                android:id="@+id/btn_login"
                android:layout_gravity="center_horizontal"/>

    </LinearLayout>
</LinearLayout>