<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_donante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notificacion_donante"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginRight="5dp"/>

        <TextView
            android:id="@+id/tv_donante_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notificacion_fecha"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginRight="5dp"/>

        <TextView
            android:id="@+id/tv_fecha_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_direccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notificacion_direccion"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginRight="5dp"/>

        <TextView
            android:id="@+id/tv_direccion_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Descripcion: "
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginRight="5dp"/>

        <TextView
            android:id="@+id/tv_descripcion_notif_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    </LinearLayout>

</LinearLayout>