<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="2dp"
    android:layout_marginTop="2dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/textRec"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_receptor"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <TextView
            android:id="@+id/textReceptorRec"
            android:layout_marginTop="1dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/textDon"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_donante"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        <TextView
            android:id="@+id/textDonanteRec"
            android:layout_marginTop="1dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/textProdRec"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_producto"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        <TextView
            android:id="@+id/textCodProdRec"
            android:layout_marginTop="1dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Descripcion: "
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/textDescProdRec"
            android:layout_marginTop="1dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu"/>

    </LinearLayout>


    <Button
        android:id="@+id/btnConfirRec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Confirmar"
        android:layout_gravity="center"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar_Login"
        android:visibility="invisible"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progressbar_color"
        android:layout_gravity="center_horizontal"

        />

</LinearLayout>