<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="example.com.investigacionoperativa2017.ScanActivity"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/proyectokoinonia"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Bienvenido: "
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/nombre_bienvenido"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        </LinearLayout>

        <Button
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/notificacion_btn"
            android:background="@drawable/ic_notifications_black_36dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"/>

    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ingrese o escanee el numero de seguimiento"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="#000000"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        >
        
        <EditText
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="3dp"
            android:id="@+id/editTextNumSeguimiento"
            android:textCursorDrawable="@drawable/cursor_color"
            android:backgroundTint="#f58233"
            android:textColor="#000000"
            />


        <Button android:id="@+id/scan_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/scan" />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:textColor="@color/rojo"
        android:layout_marginBottom="5dp"
        android:visibility="invisible"
        android:id="@+id/textErrorScan"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:text="Seleccione la accion a realizar:"
        android:textAppearance="@style/TextAppearance.AppCompat" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/boton_recibir"
            android:text="@string/recibido"
            android:layout_weight="0.25"
            android:background="#1976D2"
            android:layout_marginRight="2dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/boton_enviar"
            android:text="@string/enviar"
            android:layout_weight="0.25"
            android:layout_marginLeft="2dp"
            android:background="#1565C0"/>

    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/boton_detalles"
        android:text="Ver seguimiento producto"
        android:layout_marginTop="2dp"
        android:layout_gravity="center"
        android:background="#1E88E5"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar_Login"
        android:visibility="invisible"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progressbar_color"
        android:layout_gravity="center_horizontal"

        />

</LinearLayout>
